--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,6 +1,4 @@
 ﻿@page "/game/{numOfPlayers:int}/{symbolPlayerOne}"
-
-@inject IJSRuntime JS
 @inject NavigationManager Navigation
 
 <PageTitle>Krizic Kruzic</PageTitle>
@@ -8,15 +6,13 @@
 <h2>On the move: @onTheMove @((onTheMove != symbolPlayerOne && numOfPlayers == 1) ? " (PC)" : "")</h2>
 <h3>Score: @scorePlayerOne:@scorePlayerTwo</h3>
 <table> 
-    @for (int i = 0; i < 3; i++)
-    {
+    @for (int i = 0; i < 3; i++) {
         var row = i;
         <tr>
-            @for (int j = 0; j < 3; j++)
-            {
+            @for (int j = 0; j < 3; j++) {
                 var col = j;
-                <td class="@(string.IsNullOrWhiteSpace(polje[row, col]) ? "" : "clicked")" @onclick="() => Set(row, col)">
-                    @polje[row, col]
+                <td class="@(string.IsNullOrWhiteSpace(board[row, col]) ? "" : "clicked")" @onclick="() => Set(row, col)">
+                    @board[row, col]
                 </td>
             }
         </tr>
@@ -26,41 +22,40 @@
     <button @onclick="() => GoToMainMenu()">MAIN MENU</button>
 </div>
 
+@if (showAlert) {
+    <div class="alertWindow">
+        <p>@alertMessage</p>
+        <button @onclick="ConfirmAlert">OK</button>
+    </div>
+}
+
 @code {
     [Parameter]
     public int numOfPlayers { get; set; }   
     [Parameter]
     public required string symbolPlayerOne { get; set; }
     public required string onTheMove;
-    public string? lastStart;
-    bool checkFinished = true;
-    bool resetFinished = false;
-
-    public int scorePlayerOne = 0;
-    public int scorePlayerTwo = 0;
+    public string? lastStart, alertMessage;
+    bool isDraw = true, resetFinished = false, showAlert = false;
+    public int scorePlayerOne = 0, scorePlayerTwo = 0;
+    TaskCompletionSource<bool>? tcs;
     Random random = new();
+    string[,] board = new string[3, 3];         
 
-    protected override void OnParametersSet()       //kada se prenesu parametri iz urla postave se varijable za praćenje poteza
-    {
-        if (lastStart is null)
-        {
+    protected override void OnParametersSet() {      //kada se prenesu parametri iz urla postave se varijable za praćenje poteza
+        if (lastStart is null) {
             onTheMove = symbolPlayerOne;
             lastStart = symbolPlayerOne;
         }
     }
-
-    string[,] polje = new string[3, 3];         //polje koje predstavlja grid 
-
     void GoToMainMenu() {               //navigacija za main menu
         Navigation.NavigateTo("/");
     }
-
     async Task Set(int x, int y) {      //postavlja X ili O na odabrano polje i dalje daje PCju potez ako su zadovoljeni uvjeti
-        if (string.IsNullOrWhiteSpace(polje[x, y]) && (onTheMove == symbolPlayerOne || numOfPlayers == 2)) {
-            polje[x, y] = onTheMove;
+        if (string.IsNullOrWhiteSpace(board[x, y]) && (onTheMove == symbolPlayerOne || numOfPlayers == 2)) {
+            board[x, y] = onTheMove;
             StateHasChanged();
-            await Task.Delay(50);
-            await checkEndGame();
+            await CheckEndGame(x, y);
 
             if (resetFinished) {           
                 resetFinished = false;
@@ -69,51 +64,39 @@
 
             onTheMove = (onTheMove == "X") ? "O" : "X";
 
-            if (numOfPlayers == 1 && onTheMove != symbolPlayerOne) {
-                StateHasChanged();
-                await Task.Delay(1000);
-                await PCMove();
-            }
+            if (numOfPlayers == 1 && onTheMove != symbolPlayerOne) await GiveTurnToPC();
         }
     }
-
-    async Task Reset() {        //resetira grid i daje PCju prvi potez ako je on idući
+    async Task GiveTurnToPC() {
+        StateHasChanged();
+        await Task.Delay(1000);
+        await PCMove();
+    }
+    async Task Reset() {        //resetira polje i daje PCju prvi potez ako je on idući
         resetFinished = true;
 
-        if (lastStart == "X") {
-            lastStart = "O";
-            onTheMove = "O";
-        } else {
-            lastStart = "X";
-            onTheMove = "X";
-        }
+        lastStart = (lastStart == "X") ? "O" : "X";
+        onTheMove = lastStart;
 
         for (int i = 0; i < 3; i++) 
             for (int j = 0; j < 3; j++) 
-                polje[i, j] = "";
+                board[i, j] = "";
 
-        if (numOfPlayers == 1 && onTheMove != symbolPlayerOne) {
-            StateHasChanged();
-            await Task.Delay(1000);
-            await PCMove();
-        }
-
+        if (numOfPlayers == 1 && onTheMove != symbolPlayerOne) await GiveTurnToPC();
         StateHasChanged();
     }
-
     async Task PCMove() {                //PC nasumično odabire jedno od slobodnih polja za svoj potez
         List<(int x, int y)> remainingFields = new();
         for (int i = 0; i < 3; i++) 
             for (int j = 0; j < 3; j++) {
-                if (string.IsNullOrWhiteSpace(polje[i, j])) remainingFields.Add((i, j));
+                if (string.IsNullOrWhiteSpace(board[i, j])) remainingFields.Add((i, j));
             }
 
         if (remainingFields.Count > 0) {
             var (i, j) = remainingFields[random.Next(remainingFields.Count)];
-            polje[i, j] = onTheMove;
+            board[i, j] = onTheMove;
             StateHasChanged();
-            await Task.Delay(50);
-            await checkEndGame();
+            await CheckEndGame(i, j);
             if (resetFinished) {
                 resetFinished = false;
                 return;
@@ -121,61 +104,63 @@
             onTheMove = (onTheMove == "X") ? "O" : "X";
         }
     }
+     async Task CheckEndGame(int x, int y) {             //provjera kraja igre po retcima, stupcima i dijagonalama
+        string currentPlayer = board[x, y];
+        if (string.IsNullOrWhiteSpace(currentPlayer)) return;
 
-    async Task checkEndGame() {             //provjera kraja igre po retcima, stupcima i dijagonalama
-        for (int i = 0; i < 3; i++)
-        {
-            if (!string.IsNullOrWhiteSpace(polje[i, 0]) && polje[i, 0] == polje[i, 1] && polje[i, 1] == polje[i, 2]) {
-                await JS.InvokeVoidAsync("alert", "Winner " + polje[i, 0] + "!");
-                if (polje[i, 0] == symbolPlayerOne) scorePlayerOne++;
-                else {
-                    scorePlayerTwo++;
-                }
-                await Reset();
-                return;
-            }
-        }
-        for (int i = 0; i < 3; i++)
-        {
-            if (!string.IsNullOrWhiteSpace(polje[0, i]) && polje[0, i] == polje[1, i] && polje[1, i] == polje[2, i]) {
-                await JS.InvokeVoidAsync("alert", "Winner " + polje[0, i] + "!");
-                if (polje[0, i] == symbolPlayerOne) scorePlayerOne++;
-                else {
-                    scorePlayerTwo++;
-                }
-                await Reset();
-                return;
-            }
-        }
-        if (!string.IsNullOrWhiteSpace(polje[0, 0]) && polje[0, 0] == polje[1, 1] && polje[2, 2] == polje[1,1]) {
-            await JS.InvokeVoidAsync("alert", "Winner " + polje[0, 0] + "!");
-            if (polje[0, 0] == symbolPlayerOne) scorePlayerOne++;
-            else {
-                scorePlayerTwo++;
-            }
-            await Reset();
+        if (board[x, 0] == currentPlayer && board[x, 1] == currentPlayer && board[x, 2] == currentPlayer) {      //redak
+            await UpdateWinnerStats(currentPlayer);
             return;
         }
-        if (!string.IsNullOrWhiteSpace(polje[0, 2]) && polje[0, 2] == polje[1, 1] && polje[2, 0] == polje[1,1]){
-            await JS.InvokeVoidAsync("alert", "Winner " + polje[0, 2] + "!");
-            if (polje[0, 2] == symbolPlayerOne) scorePlayerOne++;
-            else {
-                scorePlayerTwo++;
-            }
-            await Reset();
+
+        if (board[0, y] == currentPlayer && board[1, y] == currentPlayer && board[2, y] == currentPlayer) {      //stupac
+            await UpdateWinnerStats(currentPlayer);
             return;
         }
-        checkFinished = true;           //ako je grid cijeli ispunjen onda je neriješeno
+
+        if (x == y && board[0, 0] == currentPlayer && board[1, 1] == currentPlayer && board[2, 2] == currentPlayer) {    //glavna dijagonala
+            await UpdateWinnerStats(currentPlayer);
+            return;
+        }
+
+        if (x + y == 2 && board[0, 2] == currentPlayer && board[1, 1] == currentPlayer && board[2, 0] == currentPlayer) {    //sporedna dijagonala
+            await UpdateWinnerStats(currentPlayer);
+            return;
+        }
+
+        isDraw = true;           //ako je board cijeli ispunjen onda je neriješeno
         for (int i = 0; i < 3; i++) 
             for (int j = 0; j < 3; j++) {
-                if (string.IsNullOrWhiteSpace(polje[i, j])) checkFinished = false;
+                if (string.IsNullOrWhiteSpace(board[i, j])) isDraw = false;
             }
-        if (checkFinished) {
-            await JS.InvokeVoidAsync("alert", "Draw!");
+            
+        if (isDraw) {
+            await ShowMessage("Draw!");
             await Reset();
             return;
         }
-        return;
+    }
+    async Task UpdateWinnerStats(string winner) {       //metoda koja se zove kada je igra gotova
+        await ShowMessage("Winner " + winner + "!");
+
+        if (winner == symbolPlayerOne) scorePlayerOne++;
+        else scorePlayerTwo++;
+
+        await Reset();
+    }
+    async Task ShowMessage(string message) {    //prikazuje alert, zatim kreira novi TCS koji čeka dok se ne pritisne tipka OK, nakon toga skriva alert
+        alertMessage = message;
+        showAlert = true;
+        StateHasChanged();
+
+        tcs = new TaskCompletionSource<bool>();
+        await tcs.Task;
+
+        showAlert = false;
+        StateHasChanged();
+    }
+    void ConfirmAlert() {       //na pritisak gumba oslobađamo izvođenje koda
+        tcs?.SetResult(true);
     }
 }
 
